*SVN*

* Don't destroy a HashWithIndifferentAccess if symbolize_keys! or  stringify_keys! is called on it. Closes #5076. [Marcel Molina Jr., guy.naor@famundo.com]

* Document Module::delegate. #5002 [pergesu@gmail.com]

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Strip out punctuation on predicates or bang methods being aliased with alias_method_chain since target?_without_feature is not a valid method name. Add tests for Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Allow default options in with_options to be overridden. Closes #4480. [murphy@cYcnus.de] 

* Added Module#alias_method_chain [Jamis Buck]

* Updated to Builder 2.0 [DHH]

* Add Array#split for dividing arrays into one or more subarrays by value or block. [Sam Stephenson]

*1.3.1* (April 6th, 2006)

* Clean paths inside of exception messages and traces. [Nicholas Seckar]

* Add Pathname.clean_within for cleaning all the paths inside of a string. [Nicholas Seckar]

* provide an empty Dependencies::LoadingModule.load which prints deprecation warnings.  Lets 1.0 applications function with .13-style environment.rb.


*1.3.0* (March 27th, 2006)

* When possible, avoid incorrectly obtaining constants from parent modules. Fixes #4221. [Nicholas Seckar]

* Add more tests for dependencies; refactor existing cases. [Nicholas Seckar]

* Move Module#parent and Module#as_load_path into core_ext. Add Module#parent. [Nicholas Seckar]

* Add CachingTools::HashCaching to simplify the creation of nested, autofilling hashes. [Nicholas Seckar]

* Remove a hack intended to avoid unloading the same class twice, but which would not work anyways. [Nicholas Seckar]

* Update Object.subclasses_of to locate nested classes. This affects Object.remove_subclasses_of in that nested classes will now be unloaded. [Nicholas Seckar]
